[package]
name = "dbshark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
crc64 = "2.0.0"
indexmap = "2.3.0"
log = "0.4.22"
parking_lot = "0.12.3"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"
env_logger = "0.11.3"
pprof = { version = "0.13.0", features = ["flamegraph"] }
tempfile = "3.10.1"

[[bench]]
name = "db_benchmark"
harness = false
